# reagent

./: .discord-ops.json  .gitignore  .gitleaks.toml  .mcp.json  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  RESTART.md  SECURITY.md  THREAT_MODEL.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
.changeset/: account-oauth-env-fix.md  account-switch-keychain.md  account-switch-sync-back.md  account-verify-release.md  agent-personas-complete.md  agent-personas.md  audit-remediation-v040.md  brave-tigers-release.md  client-engagement-agents-committed.md  commit-review-gate-agent-handoff.md  commit-review-gate-cache-fix.md  context-protection-hook.md  daemon-testing-and-config.md  docs-overhaul-and-mcp-config.md  expand-agent-roster.md  feat-v0-7-0.md  fix-401-token-death.md  fix-keychain-account-flag.md  fix-keychain-envelope.md  fix-oauth-raw-blob.md  fix-token-refresh-wrapper.md  github-workflow-gates.md  governance-scope-and-connection-lifecycle-docs.md  init-mcp-dedup-warning.md  init-mcp-json-and-tech-profiles.md  mcp-gateway.md  multi-credential-management.md  obscure-token-preview.md  obsidian-vault-integration.md  pr-voice-reviewer.md  preflight-detect-security-governance-reframe.md  quality-gates-pm-v050.md  readme-install-guide.md  reagent-daemon.md  reagent-upgrade-command.md  remove-daemon-commands.md  remove-rust-daemon.md  (+5 more)
daemon/: Cargo.toml
daemon/src/: config.rs  main.rs  project.rs  routes.rs  session.rs  watchdog.rs
daemon/tests/: integration.rs
(+356 files in other folders)
