[package]
name = "reagent-daemon"
version = "0.1.0"
edition = "2021"
description = "Persistent HTTP/SSE multi-project MCP gateway daemon for reagent"
license = "MIT"
authors = ["Booked Solid Technology <oss@bookedsolid.tech>"]

[[bin]]
name = "reagent-daemon"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# UUID generation for session IDs
uuid = { version = "1", features = ["v4"] }

# Home directory resolution for ~/.reagent/daemon.yaml
dirs = "5"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
# Minimize binary size for npm distribution
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compile times during development
opt-level = 0
